language/tools/move-unit-test/tests/test_sources/proposal_test.storage.exp
Running tests
[ PASS    ] 0x1::Module::other_module_aborts
[ PASS    ] 0x1::Module::tests_a
[ PASS    ] 0x1::Module::tests_aborts
[ PASS    ] 0x1::Module::tests_b
[ PASS    ] 0x1::Module::tests_c
[ FAIL    ] 0x1::Module::tests_d

Test failures:

Failures in 0x1::Module:

┌── tests_d ──────
│ error: 
│ 
│      ┌── tests/test_sources/proposal_test.move:102:9 ───
│      │
│  102 │         assert(d<u64>(@0x2, 6), 3);
│      │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Test was not expected to abort but it aborted with 3 here
│      ·
│   95 │     fun tests_d(a1: signer, a2: signer)
│      │         ------- In this function in 0x1::Module
│      │
│ 
│ 
│ ────── Storage state at point of failure ──────
│ 0x1:
│ 	=> key 0x1::Module::B<U64> {
│ 	    t: 5
│ 	}
│ 0x2:
│ 	=> key 0x1::Module::B<Bool> {
│ 	    t: 6
│ 	}
│ 	=> key 0x1::Module::B<U64> {
│ 	    t: 5
│ 	}
│ 	=> key 0x1::Module::B<0x1::Module::C<U64>> {
│ 	    t: 5
│ 	}
│ 
└──────────────────

Test result: FAILED. Total tests: 6; passed: 5; failed: 1
